--- a/css/texto1.css
+++ b/css/texto1.css
@@ -3,11 +3,32 @@ body {
 }
 
 .um {
-    background: black;
+    background: white;
     color: white;
     padding: 0 20px;
     height: 100%;
     font-size: 20px;
+}
+
+#menu ul {
+    padding: 0px;
+    margin: 0px;
+    background-color: #EDEDED;
+    list-style: none;
+}
+
+#menu ul li {
+    display: inline;
+}
+
+#menu ul li a {
+    padding: 2px 10px;
+    display: inline-block;
+    /* visual do link */
+    background-color: #EDEDED;
+    color: #333;
+    text-decoration: none;
+    border-bottom: 20px solid #EDEDED;
 }
 
 h1 {
