--- a/css/empresa.css
+++ b/css/empresa.css
@@ -2,9 +2,9 @@ body {
     margin: 0;
 }
 
-.cabecalho {
-    background:white;
-    color: white;
+.empresa {
+    background: blue;
+    color: red;
     padding: 0 20px;
     height: 100%;
     font-size: 20px;
