--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 #menu ul {
     padding: 0px;
     margin: 0px;
-    background-color: #EDEDED;
+    background-color:darkgray;
     list-style: none;
 }
 
@@ -13,8 +13,8 @@
     padding: 2px 10px;
     display: inline-block;
     /* visual do link */
-    background-color: #EDEDED;
+    background-color: darkgray;
     color: #333;
     text-decoration: none;
-    border-bottom: 20px solid #EDEDED;
+    border-bottom: 20px solid darkgray;
 }
