--- a/css/empresa.css
+++ b/css/empresa.css
@@ -1,15 +1,59 @@
-body {
-    margin: 0;
+.titulo_azul {
+    color: #116089;
+    font-size: 45px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.empresa {
-    background: blue;
-    color: red;
-    padding: 0 20px;
-    height: 100%;
-    font-size: 20px;
+.posicao_img {
+    position: relative;
+    top: 40px;
+    left: 200px;
 }
 
-h1 {
-    margin: 0;
+.posicao_img2 {
+    position: relative;
+    top: -347px;
+    left: 965px;
+}
+
+.posicao_img3 {
+    position: relative;
+    top: -230px;
+    left: 200px;
+}
+
+.posicao_img4 {
+    position: relative;
+    top: -442px;
+    left: 550px;
+}
+
+.posicao_img5 {
+    position: relative;
+    top: -654px;
+    left: 892px;
+}
+
+.posicao_texto1 {
+    position: relative;
+    top: -135px;
+    left: 450px;
+}
+
+.paragrafo1 {
+    width: 500px;
+    font-family: sans-serif;
+    text-align: justify;
+}
+
+.posicao_texto2 {
+    position: relative;
+    top: -275px;
+    left: 200px;
+}
+
+.paragrafo2 {
+    width: 1000px;
+    font-family: sans-serif;
+    text-align: justify;
 }
