--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -3,7 +3,7 @@ body {
 }
 
 .cabecalho {
-    background:lightgoldenrodyellow;
+    background: white;
     color: white;
     padding: 0 20px;
     height: 100%;
