--- a/css/contato.css
+++ b/css/contato.css
@@ -3,3 +3,20 @@
     font-size: 45px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.posicao_texto_contato1 {
+    position: relative;
+    top: 0px;
+    left: 300px;
+}
+
+.posicao_texto_contato2 {
+    position: relative;
+    top: -518px;
+    left: 700px;
+}
+
+.linha-vertical {
+    border-left: 2px solid;
+    box-sizing: border-box;
+}
