--- a/css/empresa.css
+++ b/css/empresa.css
@@ -92,10 +92,12 @@
     width: 500px;
     font-family: sans-serif;
     text-align: justify;
+    text-indent: 50px;
 }
 
 .posicao_texto2 {
     position: relative;
+    text-indent: 50px;
     top: -275px;
     left: 200px;
 }
