--- a/css/menu.css
+++ b/css/menu.css
@@ -1,20 +1,30 @@
-#menu ul {
-    padding: 0px;
-    margin: 0px;
-    background-color: #F2F2F2;
-    list-style: none;
-}
-
-#menu ul li {
-    display: inline;
-}
-
-#menu ul li a {
-    padding: 2px 30px;
-    display: inline-block;
-    /* visual do link */
-    background-color: #F2F2F2;
-    color: dimgrey;
-    text-decoration: none;
-    border-bottom: 20px solid #F2F2F2;
-}
+    #menu {
+        display: block;
+    }
+    
+    #menu ul {
+        padding: 0px;
+        margin: 0px;
+        background-color: #F2F2F2;
+        list-style: none;
+    }
+    
+    #menu ul li {
+        display: inline;
+        transition: background-color 1s;
+    }
+    
+    #menu ul li a {
+        padding: 2px 30px;
+        display: inline-block;
+        /* visual do link */
+        background-color: #F2F2F2;
+        color: dimgrey;
+        text-decoration: none;
+        border-bottom: 20px solid #F2F2F2;
+    }
+    
+    #menu li:hover a {
+        color: #116089;
+        text-decoration: none;
+    }
