--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -29,37 +29,37 @@ h1 {
 #div_agilidade {
     position: relative;
     width: 326px;
-    height: 300px;
+    height: 270px;
     background-color: #116089;
-    top: -304px;
+    top: -274px;
     left: 174px;
-    opacity: 0.4;
+    opacity: 0.6;
 }
 
 #div_seguranca {
     position: relative;
     width: 326px;
-    height: 300px;
-    background-color: red;
-    top: -604px;
+    height: 270px;
+    background-color: darkred;
+    top: -544px;
     left: 500px;
-    opacity: 0.4;
+    opacity: 0.6;
 }
 
 #div_confianca {
     position: relative;
     width: 326px;
-    height: 300px;
+    height: 270px;
     background-color: #116089;
-    top: -904px;
+    top: -814px;
     left: 826px;
-    opacity: 0.4;
+    opacity: 0.6;
 }
 
 .agilidade {
     position: relative;
     color: white;
-    top: -1104px;
+    top: -1000px;
     left: 250px;
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -68,7 +68,7 @@ h1 {
 .seguranca {
     position: relative;
     color: white;
-    top: -1170px;
+    top: -1066px;
     left: 565px;
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -77,7 +77,7 @@ h1 {
 .confianca {
     position: relative;
     color: white;
-    top: -1237px;
+    top: -1128px;
     left: 900px;
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
