--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,40 +1,247 @@
-body {
-    margin: 0;
-    font-size: 32px;
+body{
+  font-family: Nunito, sans-serif;
+  color: #1c1c1c;
+}
+h1, h2, h3 {
+  font-family: Asap, sans-serif;
+  color: #000000;
+}
+
+.botao{
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 10px 30px;
+  background-color: #191970;
+  font-size: .9em;
+  border-radius: 3px;
+}
+
+/*Navegacao*/
+
+nav{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #191970;
+}
+
+nav > a {
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: 800;
+  font-size: 32px;
+  font-family: Yellowtail, serif;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  width: 100%;
+}
+
+nav ul li {
+  text-align: center;
+  width: 100%;
+}
+
+nav ul li a {
+  display: inline-block;
+  padding: 10px 0;
+  width: 100%;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+/*Cabecalho*/
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("../img/teste/camera.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 20px; 
+}
+
+header h1 {
+  color: #FFFFFF;
+}
+
+header p {
+  margin-bottom: 2em;
+}
+
+#sobre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 10px, 10px, 20px, 20px;
+  background-color: #191970;
+  color:#FFFFFF;
+}
+
+#sobre h2 {
+  color: #FFFFFF;
+}
+
+#sobre p{
+  margin-bottom: 2.5em;
+  max-width: 1000px;
+}
+
+#sobre .botao {
+  background-color: #f1f1f1;
+  color: #1c1c1c;
+}
+
+/*Servicos*/
+
+#serviços {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+#serviços div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 30px;
+}
+
+/*Fotos*/
+
+#fotos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+#fotos h2 {
+  margin-bottom: 20px;
+}
+
+#fotos img {
+  width: 100%;
+}
+
+/*Contato*/
+
+#contato {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+#contato h2 {
+  color: #000000;
+}
+
+/*Rodape*/
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #191970;
+  color: #FFFFFF;
+}
+
+footer a {
+  text-decoration: none;
+  color: #00FFFF;
+}
+
+@media screen and (min-width: 768px){
+  
+  /*Nav*/
+
+  nav {
+    flex-direction: row;
+    justify-content: space-around;
   }
-  
-  .caixa1 {
-    position: relative;
-    left: 100px;
-    top: 100px;
-  
-    width: 300px;
-    height: 300px;
-  
-    background-color: red;
+
+  nav ul {
+    flex-direction: row;
+    width: 70px;
   }
-  
-  .caixa2 {
-    position: relative;
-    left: -50px;
-    top: -50px;
-  
-    width: 150px;
-    height: 150px;
-  
-    background-color: yellow;
+
+  /*Cabeçalho*/
+
+  header {
+    height: 600px;
+    height: 60vh;
+    justify-content: center;
   }
-  
-  .caixa3 {
-    width: 300px;
-    height: 300px;
-  
-    background-color: green;
+
+  /*Sobre*/
+
+  #sobre {
+    height: 250px;
+    height: 30vh;
+    justify-content: center;
+    min-height: 250px;
   }
-  
-  .caixa4 {
-    width: 150px;
-    height: 150px;
-  
-    background-color: orange;
+
+  /*Servicos*/
+
+  #serviços {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    max-width: 1000px;
+    margin: 0 auto;
   }
+
+  #serviços h2 {
+    text-align: center;
+    width: 100%;
+  }
+
+  #serviços div {
+    flex-grow: 1;
+    flex-basis: 150px;
+    padding: 0 10px;
+  }
+
+  /*Fotos*/
+
+  #fotos {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #fotos h2 {
+    width: 100%;
+    text-align: center;
+  }
+
+  #fotos img {
+    width: 33.3333333%;
+  }
+
+  /*Contato*/
+
+  #contato {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  #contato h2, #contato p{
+    width: 100%;
+  }
+}
