--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,87 @@
-#menu {
-    display: block;
-}
-
-#menu ul {
-    padding: 0px;
-    margin: 0px;
-    background-color: #F2F2F2;
-    list-style: none;
-}
-
-#menu ul li {
-    display: inline;
-    transition: background-color 1s;
-}
-
-#menu ul li a {
-    padding: 2px 30px;
-    display: inline-block;
-    /* visual do link */
-    background-color: #F2F2F2;
-    color: dimgrey;
-    text-decoration: none;
-    border-bottom: 20px solid #F2F2F2;
-}
-
-#menu li:hover a {
-    color: #116089;
-    text-decoration: none;
-}
-
-.titulo_azul {
-    color: #116089;
-    font-size: 45px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.cabecalho {
-    background: white;
-    color: white;
-    padding: 0 20px;
-    height: 100%;
-    font-size: 20px;
-    margin: 0 auto;
-}
+    .titulo_azul {
+        color: #116089;
+        font-size: 45px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    
+    #menu {
+        display: block;
+    }
+    
+    #menu ul {
+        padding: 0px;
+        margin: 0px;
+        background-color: #F2F2F2;
+        list-style: none;
+    }
+    
+    #menu ul li {
+        display: inline;
+        transition: background-color 1s;
+    }
+    
+    #menu ul li a {
+        padding: 2px 30px;
+        display: inline-block;
+        /* visual do link */
+        background-color: #F2F2F2;
+        color: dimgrey;
+        text-decoration: none;
+        border-bottom: 20px solid #F2F2F2;
+    }
+    
+    #menu li:hover a {
+        color: #116089;
+        text-decoration: none;
+    }
+    
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* <--:background-image: url("../img/teste/camera.jpg"); */
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        color: #FFFFFF;
+        text-align: center;
+        padding: 20px;
+    }
+    
+    header h1 {
+        color: #116089;
+    }
+    
+    #logo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px;
+    }
+    
+    #logo div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-top: 30px;
+    }
+    
+    @media screen and (min-width: 768px) {
+        #logo {
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        #logo h2 {
+            text-align: center;
+            width: 100%;
+        }
+        #logo div {
+            flex-grow: 1;
+            flex-basis: 150px;
+            padding: 0 10px;
+        }
+    }
