--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,22 @@
         margin-top: 30px;
     }
 
+    #empresa {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px;
+      }
+      
+      #empresa div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-top: 30px;
+      }
+      
+
     @media screen and (min-width: 768px) {
 
         #logo {
@@ -88,5 +104,24 @@
             flex-basis: 150px;
             padding: 0 10px;
         }
+
+        #empresa {
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            max-width: 1000px;
+            margin: 0 auto;
+          }
+        
+          #empresa h2 {
+            text-align: center;
+            width: 100%;
+          }
+        
+          #empresa div {
+            flex-grow: 1;
+            flex-basis: 150px;
+            padding: 0 10px;
+          }
     }
     
