--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,15 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
     }
-    
+
+    p2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: justify;
+        padding: 250px;
+    }
+
     #menu {
         display: block;
         text-align: center;
@@ -74,15 +82,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 30px;
+        padding: 0px;
       }
       
       #empresa div {
         display: flex;
         flex-direction: column;
         align-items: center;
-        text-align: center;
-        margin-top: 30px;
+        text-align: justify;
+        margin-top: 0px;
       }
       
 
@@ -112,16 +120,11 @@
             max-width: 1000px;
             margin: 0 auto;
           }
-        
-          #empresa h2 {
-            text-align: center;
-            width: 100%;
-          }
-        
+            
           #empresa div {
             flex-grow: 1;
             flex-basis: 150px;
-            padding: 0 10px;
+            padding: 0 0px;
           }
     }
     
