--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
         text-align: center;
     }
 
-    .alinha_esquerda{
-        text-align: right;
+    .alinha_no_centro{
+        text-align: center;
     }
 
     #menu {
