--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
         text-align: center;
     }
 
+    .opacidade_fundo_servicos{
+        opacity: 0.1;
+    }
+
     #menu {
         display: block;
         text-align: center;
