--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,17 @@
         opacity: 0.1;
     }
 
+    .botao{
+
+        color: #FFFFFF;
+        text-decoration: none;
+        padding: 13px 70px;
+        background-color: #116089;
+        font-size: 1.0em;
+        border-radius: 4px;
+        
+      }      
+
     #menu {
         display: block;
         text-align: center;
@@ -91,19 +102,7 @@
         align-items: center;
         text-align: justify;
         margin-top: 0px;
-      }
-      #img2{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #img2 div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 0px;
-    }
-  
+      }  
 
     @media screen and (min-width: 768px) {
 
@@ -138,13 +137,5 @@
             padding: 0 0px;
           }
 
-          #img2{
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            max-width: 1000px;
-            margin: 0 auto;
-          }
-          
     }
     
