--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
         text-align: center;
     }
 
+    p{
+        text-indent: 2.5em;
+    }
     .alinha_no_centro{
         text-align: center;
     }
