--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
     }
 
     p{
-        text-indent: 2.5em;
+        text-indent: 4.5em;
+        text-align: justify;
     }
+
     .alinha_no_centro{
         text-align: center;
     }
