--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
+    video{
+        width: 500px;
+        height: 280px;
+    }
+
     h3{
         
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
