--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,12 @@
     }
     
     p{
-        text-indent: 3.5em;
         text-align: justify;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    
+    .text_ident{
+        text-indent: 3.5em;
     }
 
     video{
