--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
     
+    .div_filial{
+        width: 300px;
+        height: 300px;
+        text-align: justify;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+
     .text_ident{
         text-indent: 3.5em;
     }
