--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
+    .div_solucoes{
+        background-color: #116089;
+        width: 100%;
+        height: 100%;
+    }
+
     .text_ident{
         text-indent: 3.5em;
     }
@@ -38,10 +44,6 @@
 
     .alinha_no_centro{
         text-align: center;
-    }
-
-    .opacidade_fundo_servicos{
-        opacity: 0.1;
     }
 
     #menu {
