--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,247 +1,93 @@
-body{
-  font-family: Nunito, sans-serif;
-  color: #1c1c1c;
-}
-h1, h2, h3 {
-  font-family: Asap, sans-serif;
-  color: #000000;
+body {
+	font: 14px "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+	color: #3b3b3b;
 }
 
-.botao{
-  color: #FFFFFF;
-  text-decoration: none;
-  padding: 10px 30px;
-  background-color: #191970;
-  font-size: .9em;
-  border-radius: 3px;
+h1,h2 {
+	font-family: Georgia;
 }
 
-/*Navegacao*/
-
-nav{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #191970;
+h1 {
+	border-bottom: 3px solid #aaa;
+	background-color: #3b3b3b;
+	color: #ddd;
+	padding: 5px;	
 }
 
-nav > a {
-  text-decoration: none;
-  color: #FFFFFF;
-  font-weight: 800;
-  font-size: 32px;
-  font-family: Yellowtail, serif;
+h2 {
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	background-color: #DDD;
+	padding-left: 5px;
+	margin: 0 0 0 -15px;
+	font-weight: normal;
 }
 
-nav ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  list-style: none;
-  padding: 0;
-  width: 100%;
+.secao {
+	background-color: #eee;
+	padding-left: 15px;
 }
 
-nav ul li {
-  text-align: center;
-  width: 100%;
+label {
+	font-weight: bold;
+	margin-right: 10px;
 }
 
-nav ul li a {
-  display: inline-block;
-  padding: 10px 0;
-  width: 100%;
-  text-decoration: none;
-  color: #FFFFFF;
+label:after {
+	content: ":";
 }
 
-/*Cabecalho*/
-
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url("../img/teste/camera.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  color: #FFFFFF;
-  text-align: center;
-  padding: 20px; 
+a {
+	text-decoration:none;
+	color: #f33;
 }
 
-header h1 {
-  color: #FFFFFF;
+a:visited {
+	text-decoration:none;
+	color: #700;
 }
 
-header p {
-  margin-bottom: 2em;
+a:hover {
+	text-decoration:none;
+	color: #fa0;
 }
 
-#sobre {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 10px, 10px, 20px, 20px;
-  background-color: #191970;
-  color:#FFFFFF;
+#menu {
+	margin: 0;
 }
 
-#sobre h2 {
-  color: #FFFFFF;
+#menu ul, #menu li {
+	display: inline;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
-#sobre p{
-  margin-bottom: 2.5em;
-  max-width: 1000px;
+#menu .ativo {
+	background-color: #ddd;
 }
 
-#sobre .botao {
-  background-color: #f1f1f1;
-  color: #1c1c1c;
+.vcard {
+	padding: 5px;
 }
 
-/*Servicos*/
-
-#serviços {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px;
+.url, .email {
+	display: block;
 }
 
-#serviços div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin-top: 30px;
+.photo {
+	float: right;
+	margin-right: 20%;
 }
 
-/*Fotos*/
-
-#fotos {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 20px;
+#footnote {
+	border-top: 1px dashed #aaa;
+	padding: 5px;
+	font: 75% "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+	
 }
 
-#fotos h2 {
-  margin-bottom: 20px;
-}
-
-#fotos img {
-  width: 100%;
-}
-
-/*Contato*/
-
-#contato {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
-
-#contato h2 {
-  color: #000000;
-}
-
-/*Rodape*/
-
-footer {
-  text-align: center;
-  padding: 10px;
-  background-color: #191970;
-  color: #FFFFFF;
-}
-
-footer a {
-  text-decoration: none;
-  color: #00FFFF;
-}
-
-@media screen and (min-width: 768px){
-  
-  /*Nav*/
-
-  nav {
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-  nav ul {
-    flex-direction: row;
-    width: 70px;
-  }
-
-  /*Cabeçalho*/
-
-  header {
-    height: 600px;
-    height: 60vh;
-    justify-content: center;
-  }
-
-  /*Sobre*/
-
-  #sobre {
-    height: 250px;
-    height: 30vh;
-    justify-content: center;
-    min-height: 250px;
-  }
-
-  /*Servicos*/
-
-  #serviços {
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    max-width: 1000px;
-    margin: 0 auto;
-  }
-
-  #serviços h2 {
-    text-align: center;
-    width: 100%;
-  }
-
-  #serviços div {
-    flex-grow: 1;
-    flex-basis: 150px;
-    padding: 0 10px;
-  }
-
-  /*Fotos*/
-
-  #fotos {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  #fotos h2 {
-    width: 100%;
-    text-align: center;
-  }
-
-  #fotos img {
-    width: 33.3333333%;
-  }
-
-  /*Contato*/
-
-  #contato {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 500px;
-    margin: 0 auto;
-  }
-  #contato h2, #contato p{
-    width: 100%;
-  }
+#footnote li {
+	list-style-type: none;
+	margin-top: 3px;
 }
