--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
     .titulo_azul {
-        color: #116089;
+        color: #005b7f;
         font-size: 45px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
@@ -16,6 +16,39 @@
        left:65%;
        width: 120px;
        height: 30px;
+       
+    }
+
+    .botao{
+
+        font-weight: bold;
+        padding: 5px;
+        float: left;
+        border-top-width: 1px;
+        border-right-width: 1px;
+        border-bottom-width: 1px;
+        border-left-width: 1px;
+        border-bottom-style: solid;
+        border-top-color: #005b7f;
+        border-right-color: #005b7f;
+        border-bottom-color: #005b7f;
+        border-left-color: #005b7f;
+        color: #005b7f;
+        margin-left: 20px;
+        border-radius: 10px 10px 10px 10px;
+        font-size: 17px;
+        
+    }
+    .botao:hover{
+        
+        color: white;
+        background-color: #b11116;
+
+        border-top-color: #b11116;
+        border-right-color: #b11116;
+        border-bottom-color: #b11116;
+        border-left-color: #b11116;
+               
     }
 
     .div_filial{
@@ -23,12 +56,6 @@
         height: 300px;
         text-align: justify;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-
-    .div_solucoes{
-        background-color: #116089;
-        width: 100%;
-        height: 100%;
     }
 
     .text_ident{
@@ -62,28 +89,31 @@
     #menu ul {
         padding: 0px;
         margin: 0px;
-        background-color: #F2F2F2;
+        background-color: #005b7f;
         list-style: none;
     }
     
     #menu ul li {
+        font-size: 17px;
         display: inline;
         transition: background-color 1s;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
     
     #menu ul li a {
-        padding: 2px 30px;
+        padding: 1px 40px;
         display: inline-block;
+
         /* visual do link */
-        background-color: #F2F2F2;
-        color: dimgrey;
+
+        background-color: #005b7f;
+        color: white;
         text-decoration: none;
-        border-bottom: 20px solid #F2F2F2;
+        border-bottom: 20px solid #005b7f;
     }
     
     #menu li:hover a {
-        color: #116089;
+        color: #b11116;
         text-decoration: none;
     }
     
@@ -91,7 +121,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        /* <--:background-image: url("../img/teste/camera.jpg"); */
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -103,7 +132,7 @@
     header h1 {
         margin-top: 80px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        color: #116089;
+        color: #005b7f;
     }
 
     footer {
@@ -120,7 +149,7 @@
     }
     
     footer p {
-        color: #116089;
+        color: #005b7f;
         margin-top: 80px;
     }
 
