--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,12 @@
         height: 280px;
     }
 
+    h1{
+        
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 22px;
+    }
+
     h3{
         
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
