--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
     }
-    
+
     p{
         text-align: justify;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -16,7 +16,7 @@
        left:65%;
        width: 120px;
        height: 30px;
-       
+        cursor: pointer;
     }
 
     .botao{
