--- a/css/style.css
+++ b/css/style.css
@@ -141,22 +141,18 @@
     }
 
     footer {
+        
         display: flex;
         flex-direction: column;
         align-items: center;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        
+        background-color: #f2f2f2;
         text-align: center;
         padding: 20px;
+        
     }
-    
-    footer p {
-        color: #005b7f;
-        margin-top: 80px;
-    }
-
     
     #logo {
         display: flex;
