--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
-        background-color: #f2f2f2;
+        background-color: white;
         text-align: center;
         padding: 20px;
         
