--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,18 @@
         text-align: center;
     }
 
+    textarea {
+
+        font-size: .8rem;
+        letter-spacing: 1px;
+        padding: 10px;
+        line-height: 1.5;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        box-shadow: 1px 1px 1px #999;
+        
+    }
+
     .galeria{
         margin: 10px 50px;
     }
@@ -63,6 +75,11 @@
         border-bottom-color: #b11116;
         border-left-color: #b11116;
                
+    }
+
+    .botao:focus{
+        outline: none;
+        box-shadow: none;
     }
 
     .div_filial{
