--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,69 @@
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
 
-      
+
+      *{
+	margin:0;
+	padding:0;
+}
+body{
+	font-family:"Myriad Pro", "Trebuchet MS", sans-serif;
+	text-transform:uppercase;
+	text-shadow: 1px 1px 2px #ccc;
+	font-size:14px;
+	background:#333;
+	color:#333;
+}
+h1{
+	font-size:32px;
+	padding:20px;
+	color:#fff;
+	z-index:999;
+	position:relative;
+	font-weight:normal;
+}
+.loader{
+	width:70px;
+	height:70px;
+	position:fixed;
+	top:50%;
+	left:50%;
+	margin:-35px 0px 0px -35px;
+	opacity:0.7;
+	z-index:1000;
+	background:#fff url(../images/loader.gif) no-repeat center center;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	border-radius:15px;
+	-moz-box-shadow:0px 0px 5px #999;
+	-webkit-box-shadow:0px 0px 5px #999;
+	box-shadow:0px 0px 5px #999;
+}
+.bg_image img{
+	position:fixed;
+	top:0px;
+	left:0px;
+	width:100%;
+	z-index:0;
+}
+.footer{
+	position:fixed;
+	top:10px;
+	right:10px;
+	z-index:999999;
+}
+.footer a{
+	color:#888;
+	text-decoration:none;
+	text-shadow:1px 1px 1px #fff;
+	font-size:12px;
+	padding-right:20px;
+
+}
+.footer a:hover{
+	color:#000;
+}
+    
     @media screen and (min-width: 768px) {
 
         #logo {
