--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,8 +1,24 @@
-button{
-    position: absolute;
-    width: 230px;
-    height: 30px;
-    cursor: pointer;
+label{
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h3{
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+input{
+    color: #b11116;
+}
+
+textarea{
+    color: #b11116;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+body{
+    background-color:silver;
 }
 
 .botao{
